fixed line height issues on mobile

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
 	background-color: #fff;
 }
 
+body h1 h2 h3 h4 h5 h6{
+	line-height: normal;
+}
+
 a {
 	color: #24a7ff;
 	text-decoration: none;
@@ -70,7 +74,7 @@ a:hover {
 .post-page-title {
 	text-align: center;
 	line-height: normal;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 }
 
 .book-cover {
@@ -106,10 +110,7 @@ a:hover {
 		background-color: #333;
 		color: #ebebeb
 	}
-	a {
-		color: #40C2DC
-	}
-	h1, h1 a, h2, h2 a, h3, #masthead h1 a {
+	h1, h1, h2, h2, h3, #masthead h1 a {
 		color: #ebebeb
 	}
 }
